fixed the shadow for project boxes - Made more projects buttons and overally buttons look better with no purple effect. - fixed some spacing/margin issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,12 @@
     --intro-text: rgb(36, 35, 35);
 }
 
+/* Removing the default link styling and keeping the colour blue */
+a:visited { text-decoration: none; color:var(--blue-fill); }
+a:hover { text-decoration: none; color:var(--blue-fill); }
+a:focus { text-decoration: none; color:var(--blue-fill); }
+a:hover, a:active { text-decoration: none; color:var(--blue-fill) }
+
 * {
     /* background-color: rgb(244, 244, 244); */
     font-family: "Inter", sans-serif;
@@ -260,14 +266,13 @@ button:hover:after {
 
 /* START OF MAIN INFO */
 .main-content {
-    width: calc(100vw - 300px);
+    width: calc(100vw);
     /* Adjust based on your sidebar's width */
     padding: 2em auto;
     margin-top: 100px;
     margin-right: 75px;
     padding-left: 0px;
     z-index: 2;
-    overflow: hidden;
 }
 
 .info-container {
@@ -302,12 +307,15 @@ button:hover:after {
     align-items: center;
     height: 300px;
     align-items: flex-start;
+    padding: 30px;
 }
 
 .projects-box:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     transform: translateY(-5px);
-    border-radius: 10px;
+    border-radius: 20px;
+    /* move the box to the left */
+    transition: 0.3s;
 }
 
 .project-box-images {
@@ -345,9 +353,31 @@ button:hover:after {
     padding: 5px;
     margin-top: 0px;
     margin-right: 10px;
-    /* Added space between tech tags */
 }
 
+.more-projects-link {
+    margin-top: 50px;
+    text-decoration: none;
+    display: flex;
+}
+
+.more-projects-text {
+    margin-right: 10px;
+}
+
+.more-projects-container:hover div,
+.more-projects-container:hover i {
+    color: var(--blue-fill)
+}
+
+.more-projects-container:hover i{
+    /* underline the text */
+    transform: translateY(-2px);
+}
+
+
+
+
 .contacts-container {
-    height: 100vh;
+    height: 50vh;
 }
